[package]
name = "advent-of-code"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
nom = "7.1"
itertools = "0.13"
num = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
test-log = { version = "0.2", features = ["trace"] }
fxhash = "0.2"
glam = "0.29"
# z3 = "0.12"
rand = "0.8"

# rayon = "1.6"
# ndarray = "0.15"
